--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, 'Help') %>
-<h1>Help</h1>
+<% provide(:title,'About Us') %>
+<h1>About Us</h1>
 <p>
-  Get help on the Ruby on Rails Tutorial at the
+  This is an about page for the get help on the Ruby on Rails Tutorial at the
   <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
   To get help on this sample app, see the
   <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
