--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
   <%= render 'layouts/header' %>
-  <%= yield %>
+  <div id="content"><%= yield %></div>
   <%= render 'layouts/footer' %>
 </body>
 </html>
